--- a/VKApp/VKApp/Base.lproj/Main.storyboard
+++ b/VKApp/VKApp/Base.lproj/Main.storyboard
@@ -1,24 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="VKApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="Rq5-Kc-o0w">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zgB-uM-vNr">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VK_2" translatesAutoresizingMaskIntoConstraints="NO" id="pFj-7r-w8Z">
+                                                <rect key="frame" x="20" y="52" width="240" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="95S-ee-dhh"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="VKI-hX-EXG"/>
+                                                    <constraint firstAttribute="width" constant="240" id="hLv-fe-JDS"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Логин:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4XS-kW-509">
+                                                <rect key="frame" x="20" y="142" width="54" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Пароль:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fuj-zZ-Kez">
+                                                <rect key="frame" x="20" y="217" width="64" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7ME-C1-NcE">
+                                                <rect key="frame" x="20" y="168" width="374" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZGh-vQ-hLf">
+                                                <rect key="frame" x="20" y="246" width="374" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jXw-dq-yO7">
+                                                <rect key="frame" x="20" y="303" width="137" height="45"/>
+                                                <color key="backgroundColor" name="AccentColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="45" id="bq7-Do-4uD"/>
+                                                    <constraint firstAttribute="width" constant="137" id="ykB-1o-HgQ"/>
+                                                </constraints>
+                                                <state key="normal" title="Войти">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="enterButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GE7-YK-BWd"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AJQ-Pm-y9O">
+                                                <rect key="frame" x="209" y="303" width="137" height="45"/>
+                                                <color key="backgroundColor" name="AccentColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="137" id="UMI-cS-byK"/>
+                                                    <constraint firstAttribute="height" constant="45" id="tOe-Fv-bcR"/>
+                                                </constraints>
+                                                <state key="normal" title="Регистрация">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="registerButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qqQ-zh-FKo"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SxU-ex-4em">
+                                                <rect key="frame" x="20" y="385" width="116" height="30"/>
+                                                <state key="normal" title="Забыли пароль?"/>
+                                                <connections>
+                                                    <action selector="forgetPasswordButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UvS-dv-6i6"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="Fuj-zZ-Kez" firstAttribute="top" secondItem="7ME-C1-NcE" secondAttribute="bottom" constant="15" id="8Qo-bO-MiN"/>
+                                            <constraint firstItem="AJQ-Pm-y9O" firstAttribute="top" secondItem="zgB-uM-vNr" secondAttribute="top" constant="303" id="97j-j6-hDh"/>
+                                            <constraint firstAttribute="bottom" secondItem="SxU-ex-4em" secondAttribute="bottom" constant="481" id="OWR-Er-0HV"/>
+                                            <constraint firstItem="SxU-ex-4em" firstAttribute="top" secondItem="jXw-dq-yO7" secondAttribute="bottom" constant="37" id="Ov1-N0-X1H"/>
+                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="ZGh-vQ-hLf" secondAttribute="trailing" constant="20" id="SMy-ft-Py6"/>
+                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="7ME-C1-NcE" secondAttribute="trailing" constant="20" id="VMB-QJ-vIn"/>
+                                            <constraint firstItem="jXw-dq-yO7" firstAttribute="top" secondItem="ZGh-vQ-hLf" secondAttribute="bottom" constant="23" id="Vbd-lf-grt"/>
+                                            <constraint firstItem="ZGh-vQ-hLf" firstAttribute="leading" secondItem="zgB-uM-vNr" secondAttribute="leading" constant="20" symbolic="YES" id="Vk4-Sm-o3b"/>
+                                            <constraint firstItem="jXw-dq-yO7" firstAttribute="leading" secondItem="zgB-uM-vNr" secondAttribute="leading" constant="20" symbolic="YES" id="Whn-fm-CCC"/>
+                                            <constraint firstItem="7ME-C1-NcE" firstAttribute="leading" secondItem="zgB-uM-vNr" secondAttribute="leading" constant="20" symbolic="YES" id="bSv-gD-cmk"/>
+                                            <constraint firstItem="4XS-kW-509" firstAttribute="leading" secondItem="zgB-uM-vNr" secondAttribute="leading" constant="20" symbolic="YES" id="g0z-pG-t3A"/>
+                                            <constraint firstItem="4XS-kW-509" firstAttribute="top" secondItem="pFj-7r-w8Z" secondAttribute="bottom" constant="30" id="g3F-pQ-v2B"/>
+                                            <constraint firstItem="pFj-7r-w8Z" firstAttribute="leading" secondItem="zgB-uM-vNr" secondAttribute="leading" constant="20" symbolic="YES" id="g3a-dv-2W8"/>
+                                            <constraint firstItem="ZGh-vQ-hLf" firstAttribute="top" secondItem="Fuj-zZ-Kez" secondAttribute="bottom" constant="8" symbolic="YES" id="gwx-BV-BSR"/>
+                                            <constraint firstItem="pFj-7r-w8Z" firstAttribute="top" secondItem="zgB-uM-vNr" secondAttribute="top" constant="52" id="naS-dN-J3b"/>
+                                            <constraint firstItem="Fuj-zZ-Kez" firstAttribute="leading" secondItem="zgB-uM-vNr" secondAttribute="leading" constant="20" symbolic="YES" id="o2o-FA-u4K"/>
+                                            <constraint firstItem="SxU-ex-4em" firstAttribute="leading" secondItem="zgB-uM-vNr" secondAttribute="leading" constant="20" symbolic="YES" id="qza-YO-a69"/>
+                                            <constraint firstItem="7ME-C1-NcE" firstAttribute="top" secondItem="4XS-kW-509" secondAttribute="bottom" constant="5" id="wyY-Y9-K6q"/>
+                                            <constraint firstItem="AJQ-Pm-y9O" firstAttribute="leading" secondItem="jXw-dq-yO7" secondAttribute="trailing" constant="52" id="yOc-Yc-AUV"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="zgB-uM-vNr" firstAttribute="centerX" secondItem="Rq5-Kc-o0w" secondAttribute="centerX" id="0EH-NB-kvI"/>
+                                    <constraint firstItem="zgB-uM-vNr" firstAttribute="top" secondItem="Rq5-Kc-o0w" secondAttribute="top" id="2W6-gE-XSB"/>
+                                    <constraint firstItem="zgB-uM-vNr" firstAttribute="width" secondItem="Rq5-Kc-o0w" secondAttribute="width" id="HLM-Ef-hF0"/>
+                                    <constraint firstAttribute="bottom" secondItem="zgB-uM-vNr" secondAttribute="bottom" id="PwU-QL-sv1"/>
+                                    <constraint firstItem="zgB-uM-vNr" firstAttribute="leading" secondItem="Rq5-Kc-o0w" secondAttribute="leading" id="h3e-bZ-F2Q"/>
+                                    <constraint firstAttribute="trailing" secondItem="zgB-uM-vNr" secondAttribute="trailing" id="z5Z-Fk-dz2"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Ofw-as-qSf"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="1Sq-4N-clI"/>
+                            </scrollView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Rq5-Kc-o0w" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="clR-pE-Mz2"/>
+                            <constraint firstItem="Rq5-Kc-o0w" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="f8d-5n-XuB"/>
+                            <constraint firstItem="Rq5-Kc-o0w" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gCn-os-6JM"/>
+                            <constraint firstAttribute="bottom" secondItem="Rq5-Kc-o0w" secondAttribute="bottom" id="m2x-Iu-MSp"/>
+                            <constraint firstItem="Rq5-Kc-o0w" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="nhj-wI-xf6"/>
+                            <constraint firstAttribute="trailing" secondItem="Rq5-Kc-o0w" secondAttribute="trailing" id="u8A-nH-tGn"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="enterButton" destination="jXw-dq-yO7" id="p2G-ss-QAR"/>
+                        <outlet property="loginTextField" destination="7ME-C1-NcE" id="1dT-9X-aHI"/>
+                        <outlet property="passwordTextField" destination="ZGh-vQ-hLf" id="xaa-XQ-vWU"/>
+                        <outlet property="registerButton" destination="AJQ-Pm-y9O" id="oV5-Or-6Mq"/>
+                        <outlet property="scrollView" destination="Rq5-Kc-o0w" id="qhS-IM-Hr0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140.57971014492756" y="123.88392857142857"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="VK_2" width="1662" height="413"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
