--- a/VKApp/VKApp/ViewControllers/TableCells/FriendsTableViewCell.xib
+++ b/VKApp/VKApp/ViewControllers/TableCells/FriendsTableViewCell.xib
@@ -1,21 +1,48 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FriendsTableViewCell" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FriendsTableViewCell" customModule="VKApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vkJ-au-2xN">
+                        <rect key="frame" x="8" y="9" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="Oni-z4-nCQ"/>
+                            <constraint firstAttribute="height" constant="30" id="i0M-cR-HGr"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hU0-Qi-DsC">
+                        <rect key="frame" x="50" y="12" width="246" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="hU0-Qi-DsC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="GCd-WU-Wc7"/>
+                    <constraint firstItem="vkJ-au-2xN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Qsf-6t-dg8"/>
+                    <constraint firstAttribute="trailing" secondItem="hU0-Qi-DsC" secondAttribute="trailing" constant="24" id="e7G-g1-Uil"/>
+                    <constraint firstItem="vkJ-au-2xN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="e7b-AB-Rn5"/>
+                    <constraint firstItem="vkJ-au-2xN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="ef5-Y4-tYr"/>
+                    <constraint firstAttribute="bottom" secondItem="vkJ-au-2xN" secondAttribute="bottom" constant="8" id="lPe-MT-Whx"/>
+                    <constraint firstItem="hU0-Qi-DsC" firstAttribute="leading" secondItem="vkJ-au-2xN" secondAttribute="trailing" constant="12" id="vGC-kS-d3Q"/>
+                    <constraint firstItem="hU0-Qi-DsC" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="zPN-Xh-tZa"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <point key="canvasLocation" x="-84.057971014492765" y="109.82142857142857"/>
         </tableViewCell>
     </objects>
 </document>
